<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.wim4you.intervene.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_vigilantes"
        android:name="com.wim4you.intervene.ui.vigilantes.VigilantesFragment"
        android:label="@string/menu_vigilantes"
        tools:layout="@layout/fragment_vigilantes" />

    <fragment
        android:id="@+id/nav_distress_list"
        android:name="com.wim4you.intervene.ui.distresscall.DistressListFragment"
        android:label="@string/menu_distress_list"
        tools:layout="@layout/fragment_distress_list" />

    <fragment
        android:id="@+id/nav_register"
        android:name="com.wim4you.intervene.ui.register.RegisterFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.wim4you.intervene.ui.settings.SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_proximity_chat"
        android:name="com.wim4you.intervene.proximitychat.ProximityChatRoomListFragment"
        android:label="@string/menu_proximity_chat"
        tools:layout="@layout/fragment_proximity_chat_rooms" />

    <fragment
        android:id="@+id/nav_proximity_chat_conversation"
        android:name="com.wim4you.intervene.proximitychat.ProximityChatConversationFragment"
        android:label="@string/menu_proximity_chat"
        tools:layout="@layout/fragment_proximity_chat_conversation" />

    <fragment
        android:id="@+id/nav_recordings"
        android:name="com.wim4you.intervene.recording.RecordingListFragment"
        android:label="@string/nav_recordings"
        tools:layout="@layout/fragment_recording_list" />

    <fragment
        android:id="@+id/nav_live_recording_capture"
        android:name="com.wim4you.intervene.liverecording.LiveRecordingCaptureFragment"
        android:label="@string/live_recording_capture_title"
        tools:layout="@layout/fragment_live_recording_capture" />

    <fragment
        android:id="@+id/nav_live_recording_player"
        android:name="com.wim4you.intervene.liverecording.LiveRecordingPlayerFragment"
        android:label="@string/live_recording_player_title"
        tools:layout="@layout/fragment_live_recording_player" />

    <fragment
        android:id="@+id/nav_distress_stream_viewer"
        android:name="com.wim4you.intervene.distressstream.DistressStreamViewerFragment"
        android:label="@string/distress_stream_viewer_label"
        tools:layout="@layout/fragment_distress_stream_viewer" />

    <fragment
        android:id="@+id/nav_distress_recording_player"
        android:name="com.wim4you.intervene.distressstream.DistressRecordingPlayerFragment"
        android:label="@string/distress_recording_player_title"
        tools:layout="@layout/fragment_distress_recording_player" />

</navigation>