<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_vigilantes"
            android:icon="@drawable/ic_menu_vigilantes"
            android:title="@string/menu_vigilantes" />
<!--        <item-->
<!--            android:id="@+id/nav_settings"-->
<!--            android:icon="@drawable/ic_menu_settings"-->
<!--            android:title="@string/menu_settings" />-->
        <item
            android:id="@+id/nav_register"
            android:icon="@drawable/ic_menu_register"
            android:title="@string/menu_register" />
        <item
            android:id="@+id/nav_startstop_guided_trip"
            android:icon="@drawable/ic_startstop_guided_trip"
            android:title="@string/nav_startstop_guided_trip" />

        <item
            android:id="@+id/nav_startstop_patrolling"
            android:icon="@drawable/ic_startstop_patrolling"
            android:title="@string/nav_startstop_patrolling" />

        <item
            android:id="@+id/nav_call_assistance"
            android:icon="@drawable/ic_assistance"
            android:title="@string/ask_for_assistance" />

        <item
            android:id="@+id/nav_stop_distress"
            android:icon="@drawable/ic_menu_cancel_distress"
            android:title="@string/nav_cancel_distress_call" />
    </group>
</menu>