<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/black"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <!-- Name -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_label_name"
            android:textColor="?attr/colorSecondary"
            android:textSize="16sp"
            android:textStyle="bold"
            style="@style/TextAppearance.Material3.BodyMedium" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    <!-- Alias -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_label_alias"
            android:textColor="?attr/colorSecondary"
            android:textSize="16sp"
            android:textStyle="bold"
            style="@style/TextAppearance.Material3.BodyMedium" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/aliasInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    <!-- Gender -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_label_gender"
            android:textColor="?attr/colorSecondary"
            android:textSize="16sp"
            android:textStyle="bold"
            style="@style/TextAppearance.Material3.BodyMedium" />

        <Spinner
            android:id="@+id/genderAutoCompleteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/gender_options"
            android:background="?attr/selectableItemBackground"
             />

    <!-- Age -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_label_age"
            android:textColor="?attr/colorSecondary"
            android:textSize="16sp"
            android:textStyle="bold"
            style="@style/TextAppearance.Material3.BodyMedium" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ageInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:maxLength="3" />

    <!-- Safe Word -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_label_safe_word"
            android:textColor="?attr/colorSecondary"
            android:textSize="16sp"
            android:textStyle="bold"
            style="@style/TextAppearance.Material3.BodyMedium" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/safeWordInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    <!-- Phone Number -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_label_phone_number"
            android:textColor="?attr/colorSecondary"
            android:textSize="16sp"
            android:textStyle="bold"
            style="@style/TextAppearance.Material3.BodyMedium" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phoneNumberInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone" />


        <!-- e-mail -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_label_e_mail"
            android:textColor="?attr/colorSecondary"
            android:textSize="16sp"
            android:textStyle="bold"
            style="@style/TextAppearance.Material3.BodyMedium" />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    <!-- Save Button -->
    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_save"
        android:layout_marginTop="16dp" />
    </LinearLayout>
</FrameLayout>