<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="280dp"
        android:orientation="vertical"
        android:paddingVertical="8dp">

        <TextView
            android:id="@+id/menu_version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:textAppearance="?attr/textAppearanceBody2"
            android:textColor="?android:attr/textColorSecondary" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_dark_mode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:paddingHorizontal="16dp"
            android:text="@string/switch_dark_mode" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switch_follow_system"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:paddingHorizontal="16dp"
            android:text="@string/follow_system_theme" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/menu_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:text="@string/action_settings"
            android:textAppearance="?attr/textAppearanceBody1" />

        <TextView
            android:id="@+id/menu_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:paddingHorizontal="16dp"
            android:paddingVertical="12dp"
            android:text="@string/menu_about"
            android:textAppearance="?attr/textAppearanceBody1" />

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
